--- a/config/pipelines/test1_pipeline.conf
+++ b/config/pipelines/test1_pipeline.conf
@@ -5,7 +5,7 @@ input {
   }
 filter {
   mutate {
-    add_field => [ "test1", "Hello jopa" ]
+    add_field => [ "test1", "mutate from logstash filter" ]
     }
   }
 output {
